added base implementation for next with mdx

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,96 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@font-face {
+  font-family: "Inter";
+  src: url(/fonts/Inter-Regular.ttf);
+  font-weight: 400;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+@font-face {
+  font-family: "Inter";
+  src: url(/fonts/Inter-Medium.ttf);
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(/fonts/Inter-SemiBold.ttf);
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(/fonts/Inter-Bold.ttf);
+  font-weight: 700;
 }
 
 * {
   box-sizing: border-box;
+}
+
+html,
+body {
+  background: #f6f6f6;
+  padding: 0;
+  margin: 0;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu, Helvetica Neue, sans-serif;
+}
+
+:root {
+  --color-primary: #127369;
+  --color-primary-accent: #10403b;
+  --color-primary-light: #8aa6a3;
+  --color-primary-dark: #4c5958;
+  --color-primary-gray: #bfbfbf;
+}
+/* 
+html[data-theme="dark"] {
+} */
+
+a {
+  color: inherit;
+  /* text-decoration: none; */
+}
+
+pre > code {
+  display: grid;
+}
+
+div[data-rehype-pretty-code-fragment] {
+  overflow: auto;
+}
+
+.main-container {
+  max-width: 65ch;
+  margin: 0 auto;
+  padding: 4rem 2rem;
+}
+
+.header {
+  display: grid;
+  justify-content: center;
+  position: relative;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.header > h1 {
+  text-shadow: 2px 4px 3px #fff, -2px 4px 3px #fff, 5px 0px 3px #fff, -5px 0px 3px #fff, 2px -2px 3px #fff,
+    -2px -2px 3px #fff;
+  z-index: 1;
+}
+
+.header > span {
+  position: absolute !important;
+  left: -100px;
+  right: 0px;
+  bottom: 20px;
+  z-index: 0;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.nav-links a {
+  text-decoration: none;
 }
