--- a/styles/globals.css
+++ b/styles/globals.css
@@ -182,3 +182,19 @@ h2 {
   margin-bottom: 20px;
   border-bottom: 2px solid var(--color-underline-light);
 }
+
+th {
+  text-align: left;
+  padding: 4px 8px;
+}
+
+td {
+  text-align: left;
+  border-top: 1px solid var(--color-underline-light);
+  padding: 4px 8px;
+}
+
+table {
+  border: 2px solid var(--color-underline-light);
+  border-radius: 4px;
+}
