added view transitions and centered header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,8 @@ import { SITE_TITLE } from "../consts";
       <HeaderLink href="/about">About</HeaderLink>
     </div>
 
-    <div></div>
+    <!-- hack to keep the links centered -->
+    <div style="visibility:hidden">{SITE_TITLE}</div>
   </nav>
 </header>
 
