restyled site and added sitemap to header

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,9 +7,10 @@ import { ViewTransitions } from "astro:transitions";
   title="About Me"
   description="I'm a Software Engineer based in Singapore. I primarily work as a front-end web developer, using React & Typescript"
   pubDate={new Date("Jul 03 2022")}
+  squiggleText=""
 >
-    <ViewTransitions />
-    <!-- heroImage="/blog-placeholder-about.jpg" -->
+  <ViewTransitions />
+  <!-- heroImage="/blog-placeholder-about.jpg" -->
   <p>
     I'm a Software Engineer based in Singapore. I primarily work as a front-end web developer, but I dabble in DevOps
     and backend too.
