--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,14 +5,14 @@
  */
 
 :root {
-  --accent: #2337ff;
-  --accent-dark: #000d8a;
-  --black: 15, 18, 25;
+  --accent: hsl(162, 22%, 57%);
+  --accent-dark: hsl(162, 22%, 37%);
   --gray: 96, 115, 159;
-  --gray-light: 229, 233, 240;
-  --gray-dark: 34, 41, 57;
-  --gray-gradient: rgba(var(--gray-light), 50%), #fff;
-  --box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
+  --gray-light: rgb(149, 152, 158);
+
+  --code-bg: #24292e;
+  --dark-bg: hsl(240, 7%, 11%);
+  --dark-bg-alt: hsl(240, 4%, 9%);
 }
 @font-face {
   font-family: "Atkinson";
@@ -33,11 +33,11 @@ body {
   margin: 0;
   padding: 0;
   text-align: left;
-  background: linear-gradient(var(--gray-gradient)) no-repeat;
+  background: var(--dark-bg-alt);
   background-size: 100% 600px;
   word-wrap: break-word;
   overflow-wrap: break-word;
-  color: rgb(var(--gray-dark));
+  color: white;
   font-size: 16px;
   line-height: 1.7;
 }
@@ -54,7 +54,7 @@ h4,
 h5,
 h6 {
   margin: 0 0 0.5rem 0;
-  color: rgb(var(--black));
+  color: white;
   line-height: 1.2;
 }
 h1 {
@@ -106,7 +106,7 @@ img {
 }
 code {
   padding: 2px 5px;
-  background-color: rgb(var(--gray-light));
+  background-color: var(--code-bg);
   border-radius: 2px;
 }
 pre {
@@ -124,7 +124,7 @@ blockquote {
 }
 hr {
   border: none;
-  border-top: 1px solid rgb(var(--gray-light));
+  border-top: 2px solid var(--gray-light);
 }
 @media (max-width: 720px) {
   body {
