--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,12 +2,12 @@
 import type { CollectionEntry } from "astro:content";
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
+import Squiggle from "../components/Squiggle.astro";
 
 type Props = CollectionEntry<"blog">["data"];
 
-const { title, description, pubDate, updatedDate, heroImage, heroAttribution } = Astro.props;
+const { title, description, pubDate, updatedDate, heroImage, heroAttribution, squiggleText } = Astro.props;
 ---
 
 <html lang="en">
@@ -19,21 +19,18 @@ const { title, description, pubDate, updatedDate, heroImage, heroAttribution } =
         max-width: 100%;
         margin: 0;
       }
-      .hero-image {
-        width: 100%;
-      }
-      .hero-image img {
+      .hero {
         display: block;
         margin: 0 auto;
         border-radius: 12px;
-        box-shadow: var(--box-shadow);
+        width: fit-content;
       }
       .prose {
         width: 720px;
         max-width: calc(100% - 2em);
         margin: auto;
         padding: 1em;
-        color: rgb(var(--gray-dark));
+        color: white;
       }
       .title {
         margin-bottom: 1em;
@@ -58,13 +55,14 @@ const { title, description, pubDate, updatedDate, heroImage, heroAttribution } =
     <Header />
     <main>
       <article>
-        <div class="hero-image">
-          {
-            heroImage && (
-              <img width={820} height={510} src={heroImage} title={heroAttribution} transition:name={`hero-${title}`} />
-            )
-          }
-        </div>
+        {
+          squiggleText !== "" && (
+            <div class="hero">
+              <Squiggle title={squiggleText} transitionName={`hero-${title}`} />
+            </div>
+          )
+        }
+
         <div class="prose">
           <div class="title">
             <div class="date">
@@ -84,6 +82,5 @@ const { title, description, pubDate, updatedDate, heroImage, heroAttribution } =
         </div>
       </article>
     </main>
-    <Footer />
   </body>
 </html>
