--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import { getCollection } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 import { ViewTransitions } from "astro:transitions";
+import Squiggle from "../components/Squiggle.astro";
 
 const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 ---
@@ -28,22 +28,11 @@ const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueO
         padding: 0;
       }
       ul li {
-        width: calc(50% - 1rem);
+        width: 100%;
       }
       ul li * {
         text-decoration: none;
         transition: 0.2s ease;
-      }
-      ul li:first-child {
-        width: 100%;
-        margin-bottom: 1rem;
-        text-align: center;
-      }
-      ul li:first-child img {
-        width: 100%;
-      }
-      ul li:first-child .title {
-        font-size: 2.369rem;
       }
       ul li img {
         margin-bottom: 0.5rem;
@@ -54,39 +43,35 @@ const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueO
       }
       .title {
         margin: 0;
-        color: rgb(var(--black));
+        color: white;
         line-height: 1;
       }
       .date {
         margin: 0;
         color: rgb(var(--gray));
       }
-      ul li a:hover h4,
-      ul li a:hover .date {
-        color: rgb(var(--accent));
+      ul a:hover {
+        /* transform: translate(10px); */
       }
-      ul a:hover img {
-        box-shadow: var(--box-shadow);
+      .list-item {
+        display: flex;
+        gap: 2em;
       }
       @media (max-width: 720px) {
         ul {
-          gap: 0.5em;
+          gap: 4em;
         }
-        ul li {
-          width: 100%;
-          text-align: center;
-        }
-        ul li:first-child {
-          margin-bottom: 0;
-        }
-        ul li:first-child .title {
-          font-size: 1.563em;
+        .list-item {
+          flex-direction: column;
+          gap: 1em;
         }
       }
     </style>
   </head>
+
   <body>
     <Header />
+
     <main>
       <section>
         <ul>
@@ -94,17 +79,17 @@ const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueO
             posts.map((post) => (
               <li>
                 <a href={`/blog/${post.slug}/`}>
-                  <img
-                    width={720}
-                    height={360}
-                    src={post.data.heroImage}
-                    title={post.data.heroAttribution}
-                    transition:name={`hero-${post.data.title}`}
-                  />
-                  <h4 class="title">{post.data.title}</h4>
-                  <p class="date">
-                    <FormattedDate date={post.data.pubDate} />
-                  </p>
+                  <div class="list-item">
+                    <Squiggle title={post.data.squiggleText} transitionName={`hero-${post.data.title}`} />
+
+                    <div class="list-content">
+                      <h4 class="title">{post.data.title}</h4>
+                      <p class="date">
+                        <FormattedDate date={post.data.pubDate} />
+                      </p>
+                      <p class="date">{post.data.description}</p>
+                    </div>
+                  </div>
                 </a>
               </li>
             ))
@@ -112,6 +97,5 @@ const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueO
         </ul>
       </section>
     </main>
-    <Footer />
   </body>
 </html>
