fix text overflow

--- a/src/components/Squiggle.astro
+++ b/src/components/Squiggle.astro
@@ -49,6 +49,7 @@ const { title, transitionName } = Astro.props;
   .squiggle-title {
     color: white;
     font-size: 1.5em;
+    white-space: nowrap;
   }
 
   .squiggle {
