--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../layouts/BlogPost.astro";
 import { ViewTransitions } from "astro:transitions";
+import Layout from "../layouts/BlogPost.astro";
 ---
 
 <Layout
@@ -62,7 +62,7 @@ import { ViewTransitions } from "astro:transitions";
       <td colspan="2"><strong>Hobby/personal exploration</strong></td>
     </tr>
     <tr>
-      <td colspan="2">Nodejs (express), Phoenix LiveView</td>
+      <td colspan="2">Nodejs (express), Sveltekit</td>
     </tr>
   </table>
 
