--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from "../layouts/BlogPost.astro";
 import { ViewTransitions } from "astro:transitions";
+import Layout from "../layouts/BlogPost.astro";
 ---
 
 <Layout
   title="My Projects"
   description="Personal projects I've worked on"
-  pubDate={new Date("Jul 03 2022")}
+  pubDate={new Date("Nov 18 2022")}
   squiggleText=""
 >
   <ViewTransitions />
@@ -27,7 +27,7 @@ import { ViewTransitions } from "astro:transitions";
   <p></p>
 
   <h4>
-    Mantine Salt
+    Teletwitch
     <a href="https://github.com/wenchonglee/dev-blog" target="_blank" style="color: white">
       <span class="sr-only">Repository site</span>
       <svg viewBox="0 0 16 16" aria-hidden="true" width="24" height="24" astro-icon="social/github"
@@ -40,31 +40,61 @@ import { ViewTransitions } from "astro:transitions";
   </h4>
 
   <div>
-    A select number of custom components written using Mantine, for work. They were open sourced in the spirit of
-    sharing.
+    A webapp that converts Twitch emotes into Telegram stickers.
+    <ul>
+      <li>Written in Sveltekit</li>
+      <li>Deployed on Fly.io</li>
+      <li>Persistence on Supabase with Postgres & Object store</li>
+    </ul>
 
     <p>
-      <a href="https://mantine-salt.vercel.app" target="_blank">
-        <span class="sr-only">Demo site</span>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          stroke-width="2"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12 13v.01"></path><path d="M10 16v.01"
-          ></path><path d="M14 16v.01"></path><path
-            d="M7.5 8h9l-.281 -2.248a2 2 0 0 0 -1.985 -1.752h-4.468a2 2 0 0 0 -1.986 1.752l-.28 2.248z"></path><path
-            d="M7.5 8l-1.612 9.671a2 2 0 0 0 1.973 2.329h8.278a2 2 0 0 0 1.973 -2.329l-1.612 -9.671"></path></svg
-        >
-        <span>Demo site</span>
+      <a href="https://teletwitch.fly.dev" target="_blank">
+        <span class="sr-only">Teletwitch</span>
+        <span>Teletwitch</span>
       </a>
     </p>
+    <p></p>
 
-    <div></div>
+    <h4>
+      Mantine Salt
+      <a href="https://github.com/wenchonglee/dev-blog" target="_blank" style="color: white">
+        <span class="sr-only">Repository site</span>
+        <svg viewBox="0 0 16 16" aria-hidden="true" width="24" height="24" astro-icon="social/github"
+          ><path
+            fill="currentColor"
+            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+          ></path></svg
+        >
+      </a>
+    </h4>
+
+    <div>
+      A select number of custom components written using Mantine, for work. They were open sourced in the spirit of
+      sharing.
+
+      <p>
+        <a href="https://mantine-salt.vercel.app" target="_blank">
+          <span class="sr-only">Demo site</span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12 13v.01"></path><path d="M10 16v.01"
+            ></path><path d="M14 16v.01"></path><path
+              d="M7.5 8h9l-.281 -2.248a2 2 0 0 0 -1.985 -1.752h-4.468a2 2 0 0 0 -1.986 1.752l-.28 2.248z"></path><path
+              d="M7.5 8l-1.612 9.671a2 2 0 0 0 1.973 2.329h8.278a2 2 0 0 0 1.973 -2.329l-1.612 -9.671"></path></svg
+          >
+          <span>Demo site</span>
+        </a>
+      </p>
+
+      <div></div>
+    </div>
   </div>
 </Layout>
